refactor: simplify workflow files and remove redundant code in assistant functions
- Simplified the GitHub Actions workflow files to remove unnecessary directory change commands before installing the assistant package.
  - Updated ".github/workflows/create_repo_assistant.yml" to eliminate "cd ai_assistant &&" before "pip install .".
  - Modified ".github/workflows/run_assistant_on_issue.yaml" by replacing "python tools/run_assistant.py" with a streamlined "ai_assistant" command.
  - Similar simplifications applied to "update_assistant.yml" and "update_assistant_files.yml".
- Refactored 'ai_assistant/assistant_functions.py' by removing obsolete ModifyFileInput function along with its supporting classes and methods.
  - Removed the 'ModificationInstruction' and 'ModifyFileInput' classes.
  - Simplified 'TaskInput' class and related logic to exclude modification actions.
  - Adjusted load file method output to discard line numbers.

These changes should enhance maintainability and execution efficiency within the project's automation and internal logic.

--- a/.github/workflows/create_repo_assistant.yml
+++ b/.github/workflows/create_repo_assistant.yml
@@ -27,7 +27,7 @@ jobs:
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
-        cd ai_assistant && pip install . && cd ..
+        pip install .
         ai_init_repo
 
     - name: Commit and Push Changes
