--- a/.github/workflows/update_assistant.yml
+++ b/.github/workflows/update_assistant.yml
@@ -29,6 +29,6 @@ jobs:
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
-          cd ai_assistant && pip install . && cd ..
+          pip install .
           ai_update_assistant .
 
