feat: add python comment assistant and enhance script annotations
### Added
- New assistant configuration in `assistant_config.json` for generating Python comments, identified by `asst_4t31tPuNxIenHIRMAV8OC9Wx`.

### Changed
- Added informational comments throughout `assistant_functions.py` and `create_repo_assistant.py` to improve code comprehension.
- Applied SPDX license identifiers and copyright notices at the top of the modified files for legal clarity.

### Notes
- The updates include a mix of stylistic code annotations and functional enhancements to the repository assistant setup and execution process.

--- a/ai_assistant/assistant_config.json
+++ b/ai_assistant/assistant_config.json
@@ -18,5 +18,10 @@
         "name": "commit_squash",
         "assistant_id": "asst_eMpwfrbqkU4VEkCL2DS2d7CW",
         "description": "This assistant is specialized in generating commit messages for squash"
+    },
+    "python_comment": {
+        "name": "python_comment",
+        "assistant_id": "asst_4t31tPuNxIenHIRMAV8OC9Wx",
+        "description": "This assistant is specialized in generating python comments"
     }
 }
