feat: update ai assistant configuration
Extends the `assistant_config.json` to include a new assistant designed to generate python comments. This enhancement adds an assistant with the ID `asst_4t31tPuNxIenHIRMAV8OC9Wx` alongside an existing assistant specialized in the open AI Python API. This change is aimed at broadening the AI capabilities within the project.

--- a/ai_assistant/assistant_config.json
+++ b/ai_assistant/assistant_config.json
@@ -6,6 +6,10 @@
             {
                 "assistant_id": "asst_J5Of8UtJr9IYmJo6DBjTgCQP",
                 "description": "This assistant is specialized in open AI python API"
+            },
+            {
+                "assistant_id": "asst_4t31tPuNxIenHIRMAV8OC9Wx",
+                "description": "This assistant is specialized in generating python comments"
             }
         ]
     },
