fix(workflow): correct command for dependency installation in issue assistant workflow
The command used to install dependencies in the GitHub Action `.github/workflows/run_assistant_on_issue.yaml` has been corrected from `python install .` to `pip install .`.
This change ensures the proper installation process is followed using `pip` instead of a non-existent `install` command with `python`, which could cause workflow failures.

--- a/.github/workflows/run_assistant_on_issue.yaml
+++ b/.github/workflows/run_assistant_on_issue.yaml
@@ -49,7 +49,7 @@ jobs:
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
-          python install .
+          pip install .
           ai_assistant --save-thread-id thread-id - << 'EOF'
               Try to solve as much as you can the following issue in ${{ github.repository }} repository. You should not ask the user for prompt.
 
