--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,16 @@ build-backend = "hatchling.build"
 name = "rsgpt"
 version = "0.0.0"
 authors = [{ name = " Damien  SIX ", email = " damien@robotsix.net " }]
-dependencies = ["pydantic", "litellm"]
+dependencies = [
+	"pydantic",
+	"litellm",
+	"tree_sitter==0.21.3",
+	"tree_sitter_languages",
+	"magika",
+	"pandas",
+	"scikit-learn",
+	"tenacity",
+]
 
 [project.scripts]
 rsgpt = "rsgpt:main.main"
